# TravelOS

./: .env.example  .gitignore  CLAUDE.md  TASKS.md  UPDATE.md  alembic.ini  pyproject.toml  run_stack.bat  verify_redesign.py
.claude/: settings.json
.claude/hooks/: ruff-format.ps1
.claude/skills/db-migrate/: SKILL.md
.claude/skills/pre-commit/: SKILL.md
.github/workflows/: deploy.yml
Documentations/: API_DOCUMENTATION.md  CURRENT_STATE.md  DATABASE_SCHEMA.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  GUARDRAILS.md  PRD.md  STYLE_GUIDE.md  spec.md
backend/agents/: _llm.py  budget_optimizer.py  concierge.py  events.py  hotel.py  itinerary_planner.py  packing_list.py  supervisor.py  travel_style.py  weather.py
backend/api/: dependencies.py  main.py  rate_limit.py
backend/api/routers/: approvals.py  auth.py  concierge.py  share.py  trips.py
backend/core/: config.py  logging.py  security.py
backend/db/: base.py  models.py  schemas.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 4075fc028452_initial_schema.py  545e5bb6b304_add_share_token_to_trips.py  5845b0bf9c6e_add_user_feedback_table.py  a38630cc2264_add_conflict_warning_to_itinerary_items.py  b1df5cfd3ec3_add_packing_list_to_trips.py  b2c3d4e5f6a7_add_langgraph_thread_id_to_trips.py  (+6 more)
backend/graphs/: approval_gate.py  checkpoint_save.py  conflict_detection.py  replan_graph.py  state.py  trip_graph.py  validation.py
backend/memory/: embeddings.py  semantic.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_db.py  test_health.py  test_trips.py
backend/tests/unit/: test_celery_config.py  test_config.py  test_outbox.py  test_security.py
backend/tools/: __init__.py  currency.py  destination_profile.py  events.py  flights.py  geocode.py  hotels.py  places.py  resilience.py  restaurants.py  weather.py
backend/workflows/: celery_tasks.py  outbox.py
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/trips/: page.tsx
frontend/components/3d/: StarField.tsx  StarFieldWebGL.tsx  TravelGlobe.tsx
frontend/components/travel/: AirplaneBanner.tsx  DaySky.tsx  DestinationScroll.tsx  DestinationsScroll.tsx  SkyScene.tsx  WorldGlobe.tsx
frontend/components/trip/: AgentProgress.tsx  ApprovalCards.tsx  BudgetDonut.tsx  BudgetPanel.tsx  ConciergeThread.tsx  DayNav.tsx  EditTripModal.tsx  EventsPanel.tsx  FlightsPanel.tsx  HotelsPanel.tsx  ItineraryDay.tsx  MapCard.tsx  PackingList.tsx  SectionNav.tsx  TripHero.tsx  TripMap.tsx  WeatherStrip.tsx
frontend/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Chip.tsx  CoverArt.tsx  EmptyState.tsx  Globe.tsx  Input.tsx  Modal.tsx  NavBar.tsx  ProgressBar.tsx  RouteDash.tsx  SectionHeader.tsx  Select.tsx  Skeleton.tsx  Stat.tsx  StatusBadge.tsx  Tabs.tsx  Textarea.tsx  TiltCard.tsx
frontend/lib/: api.ts  constants.ts  currency.ts  motion.ts  store.ts  ui.ts
infra/: Dockerfile.backend  docker-compose.aws-freetier.yml  docker-compose.prod.yml  docker-compose.yml  fetch_secrets.sh
infra/nginx/: nginx.conf
(+34 files in other folders)
