[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "travelos-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.*",
    "uvicorn[standard]==0.30.*",
    "langgraph==0.2.*",
    "langchain==0.2.*",
    "langchain-anthropic==0.1.*",
    "langchain-core>=0.2,<0.3",
    "pydantic[email]==2.7.*",
    "pydantic-settings==2.3.*",
    "sqlalchemy==2.0.*",
    "asyncpg==0.29.*",
    "alembic==1.13.*",
    "celery==5.4.*",
    "redis==5.0.*",
    "qdrant-client==1.9.*",
    "sentence-transformers==3.0.*",
    "httpx==0.27.*",
    "python-jose[cryptography]==3.3.*",
    "passlib[bcrypt]==1.7.*",
    "structlog==24.2.*",
]

[project.optional-dependencies]
dev = [
    "pytest==8.*",
    "pytest-asyncio==0.23.*",
    "pytest-cov==5.*",
    "httpx==0.27.*",
    "ruff==0.5.*",
    "mypy==1.10.*",
    "types-passlib",
    "types-python-jose",
    "aiosqlite",
    "email-validator",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
fix = true

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
